--- a/layout/styles/SmartStove.css
+++ b/layout/styles/SmartStove.css
@@ -1,4 +1,26 @@
-﻿html {
+﻿#warning-message {
+    display: none;
+}
+
+@media only screen and (orientation:portrait) {
+
+    #wrapper {
+        display: none;
+    }
+
+    #warning-message {
+        display: block;
+    }
+}
+
+@media only screen and (orientation:landscape) {
+
+    #warning-message {
+        display: none;
+    }
+}
+
+html {
     overflow-y: scroll;
     overflow-x: hidden;
 }
