--- a/layout/styles/SmartStove.css
+++ b/layout/styles/SmartStove.css
@@ -621,5 +621,5 @@ label {
     border-radius: 6px 6px 6px 6px;
     width: 50%;
     margin: 0 auto;
-    padding-top: 10px;
+    margin-top: 10px;
 }
